<?xml version="1.0"?>
<package format="2">
  <name>image_pub</name>
  <version>0.1.0</version>
  <description>
	  It provides a means to publush an image as sensor_msgs/Image.msg into the topics:
	  + /camera + /camera_info
	  +
  </description>
  <maintainer email="noname@gmail.com">Juan Carlos Gomez</maintainer>
  <license>BSD</license>
  <url type="website"></url>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
